Issue#23 - WIP
